--- a/app/css/_variables.scss
+++ b/app/css/_variables.scss
@@ -11,8 +11,9 @@ $h3: round($height/3);
 $h4: round($height/4);
 $h5: round($height/5);
 $h6: round($height/6);
-$h11: round($height/11);
+$h11: $height/11;
 $h13: round($height/13);
+$h72: $height/72;
 
 $w2: round($width/2);
 $w3: round($width/3);
