--- a/app/css/_functions.scss
+++ b/app/css/_functions.scss
@@ -15,24 +15,26 @@
   }
 }
 
+// Stripe
+// Note: Must be used in a background-image;
+@function stripe($angle, $color, $size, $distance) {
+  @return linear-gradient($angle, 
+                          transparent, transparent $distance,
+                          $color $distance, $color ($distance + $size),
+                          transparent ($distance + $size), transparent 100%
+                          );
+}
 // Horizontal stripe
 // Note: Must be used in a background-image
 @function h-stripe($color, $height, $top) {
-  @return linear-gradient(180deg, 
-                          transparent, transparent $top,
-                          $color $top, $color ($top + $height),
-                          transparent ($top + $height), transparent 100%
-                          );
+  @return stripe(180deg, $color, $height, $top);
 }
 
 // Vertical stripe
 // Note: Must be used in a background-image;
 @function v-stripe($color, $width, $left) {
-  @return linear-gradient(90deg, 
-                          transparent, transparent $left,
-                          $color $left, $color ($left + $width),
-                          transparent ($left + $width), transparent 100%
-                          );
+  @return stripe(90deg, $color, $width, $left);
 }
+
 
 
