--- a/app/css/_variables.scss
+++ b/app/css/_variables.scss
@@ -1,34 +1,42 @@
-/* VARIABLES */
-$unit: 10px;
-
-// Base flag dimensions
+// Default flag dimensions, 2:3 ratio
 $width:220px;
-$height:160px;
-
-// Syntactic sugar to get ratio
-$h2: round($height/2);
-$h3: round($height/3);
-$h4: round($height/4);
-$h5: round($height/5);
-$h6: round($height/6);
-$h11: $height/11;
-$h13: round($height/13);
-$h72: $height/72;
-
-$w2: round($width/2);
-$w3: round($width/3);
-$w4: round($width/4);
-$w5: round($width/5);
-$w6: round($width/6);
-
-// Unitless dimensions, for math
-$_width:strip-units($width);
-$_height:strip-units($height);
+$height:round($width * 2/3);
+@include set-syntactic-sugar($width, $height);
 
 
-$_diagonal: sqrt($_width * $_width + $_height * $_height);
-$diagonal:round($_diagonal * 1px);
 
-// More math variables
-$hypotenuse:round(sqrt($_height * $_height + $_width * $_width) * 1px);
 
+// /* VARIABLES */
+// // $unit: 10px;
+// 
+// // Base flag dimensions
+// $width:220px;
+// $height:160px;
+// 
+// // Syntactic sugar to get ratio
+// // $h2: round($height/2);
+// // $h3: round($height/3);
+// // $h4: round($height/4);
+// // $h5: round($height/5);
+// // $h6: round($height/6);
+// // $h11: $height/11;
+// // $h13: round($height/13);
+// // $h72: $height/72;
+// // 
+// // $w2: round($width/2);
+// // $w3: round($width/3);
+// // $w4: round($width/4);
+// // $w5: round($width/5);
+// // $w6: round($width/6);
+// 
+// // Unitless dimensions, for math
+// $_width:strip-units($width);
+// $_height:strip-units($height);
+// 
+// 
+// $_diagonal: sqrt($_width * $_width + $_height * $_height);
+// $diagonal:round($_diagonal * 1px);
+// 
+// // More math variables
+// $hypotenuse:round(sqrt($_height * $_height + $_width * $_width) * 1px);
+// 
