--- a/app/css/main.scss
+++ b/app/css/main.scss
@@ -1,6 +1,8 @@
 @import '_functions';
+@import '_helpers';
 @import '_variables';
 @import '_mixins';
+
 @import '_fonts';
 @import '_layout';
 @import '_flags';
