--- a/app/css/_helpers.scss
+++ b/app/css/_helpers.scss
@@ -15,15 +15,20 @@
 
 // Expose global values as syntactic sugar
 @mixin set-syntactic-sugar($width, $height) {
-  $w3:$width/3 !global;
-  $w22:$width/22 !global;
-  $w25:$width/25 !global;
-  $w52:$width/52 !global;
-
+  $h10:$height/10 !global;
+  $h11:$height/11 !global;
   $h16:$height/16 !global;
   $h18:$height/18 !global;
+  $h28:$height/28 !global;
   $h34:$height/34 !global;
-  
+
+  $w3:$width/3 !global;
+  $w16:$width/16 !global;
+  $w18:$width/18 !global;
+  $w22:$width/22 !global;
+  $w25:$width/25 !global;
+  $w37:$width/37 !global;
+  $w52:$width/52 !global;
 }
 
 // Three equal columns
@@ -43,7 +48,13 @@
                    v-stripe($cross-color, $cross-width, $cross-offset - ($cross-width - $inner-width) / 2);
 }
 
-
+// Nordic cross (eg. Denmark, Sweden)
+@mixin nordic-cross($background-color, $cross-color, $cross-width, $cross-offset) {
+  background-color:$background-color;
+  background-image:
+                   h-stripe($cross-color, $cross-width, ($height - $cross-width) / 2),
+                   v-stripe($cross-color, $cross-width, $cross-offset);
+}
 
 // 
 // /**
@@ -78,17 +89,6 @@
 // 
 // 
 // 
-// /**
-//  * Nordic cross, slightly on the left.
-//  * Eg. Sweden, Norway or Finland.
-//  **/
-// @mixin nordic-cross($background, $cross) {
-//   $x: $width / 7;
-//   $y: $height / 5;
-//   background-color:$background;
-//   background-image:h-stripe($cross, $y, 2 * $y),
-//                    v-stripe($cross, $x, 2 * $x);
-// }
 // 
 // /**
 //  * Saltire. Cross coming from the angle and separating the flag in 4 parts.
