--- a/app/css/_helpers.scss
+++ b/app/css/_helpers.scss
@@ -22,6 +22,7 @@
   $h28:$height/28 !global;
   $h34:$height/34 !global;
 
+  $w2:$width/2 !global;
   $w3:$width/3 !global;
   $w16:$width/16 !global;
   $w18:$width/18 !global;
