--- a/app/css/_helpers.scss
+++ b/app/css/_helpers.scss
@@ -32,8 +32,10 @@
   $w22:$width/22 !global;
   $w23:$width/23 !global;
   $w25:$width/25 !global;
+  $w32:$width/32 !global;
   $w37:$width/37 !global;
   $w52:$width/52 !global;
+  $w110:$width/110 !global;
 }
 
 // Three equal columns
