--- a/app/css/_old.scss
+++ b/app/css/_old.scss
@@ -1,6 +1,4 @@
-
-
-
+/*
 
 
 
@@ -518,6 +516,10 @@
 
 }
 // Korea, Republic of
+// ☰
+// ☵
+// ☲
+// ☷
 .flag-kor {
 }
 // Kuwait
@@ -943,6 +945,7 @@
  * Turkey
  * Making a crescent by making an eclipse of two circles, and slightly
  * translating and rotation the star
+ * ☪
  **/
 .flag-tur {
   background:#E30A17;
