--- a/app/css/_flags.scss
+++ b/app/css/_flags.scss
@@ -206,6 +206,7 @@
   @include three-columns(#002664, #FECB00, #C60C30);
 };
 // Chile
+// ★
 .flag-chl {
   @include ratio(2/3);
 };
@@ -252,6 +253,7 @@
   @include three-columns(#F77F00, white, #009E60);
 };
 // Croatia
+// ☗
 .flag-hrv {
   @include ratio(2/3);
 };
@@ -452,6 +454,7 @@
   @include nordic-cross-border(#003897, white, #D72828, 4 * $w25, 2 * $w25, 7 * $w25);
 }
 // India
+// ⚙
 .flag-ind {
   @include ratio(2/3);
 };
@@ -548,6 +551,7 @@
   @include ratio(2/3);
 };
 // Liberia
+// ★
 .flag-lbr {
   @include ratio(2/3);
 };
@@ -730,6 +734,7 @@
   @include ratio(2/3);
 };
 // Pakistan
+// ☪
 .flag-pak {
   @include ratio(2/3);
 };
@@ -825,6 +830,7 @@
 };
 // Saint Vincent and the Grenadines
 // http://en.wikipedia.org/wiki/Flag_of_Saint_Vincent_and_the_Grenadines
+// ♦
 .flag-vct {
   @include incomplete();
   @include ratio(1/2);
@@ -934,8 +940,19 @@
   @include nordic-cross(#006AA7, #FECC00, 2 * $w16, 5 * $w16);
 };
 // Switzerland
+// http://www.crwflags.com/fotw/flags/ch.html#col
+// 1. Stripes around to "cut" the cross
+// 2. White cross
 .flag-che {
-  @include ratio(2/3);
+  @include ratio(1);
+  background-color:#FF0000;
+  background-image:h-stripe(#FF0000, 15 * $w110, 0px),       /* 1 */ 
+                   h-stripe(#FF0000, 15 * $w110, 95 * $w110),/* 1 */
+                   v-stripe(#FF0000, 15 * $w110, 0px),       /* 1 */
+                   v-stripe(#FF0000, 15 * $w110, 95 * $w110),/* 1 */
+
+                   h-stripe(white, 24 * $w110, 43 * $w110), /* 2 */
+                   v-stripe(white, 24 * $w110, 43 * $w110); /* 2 */
 };
 // Syrian Arab Republic
 .flag-syr {
@@ -978,10 +995,12 @@
   @include ratio(2/3);
 };
 // Tunisia
+// ☪
 .flag-tun {
   @include ratio(2/3);
 };
 // Turkey
+// ☪
 .flag-tur {
   @include ratio(2/3);
 };
@@ -1014,6 +1033,7 @@
   @include ratio(2/3);
 };
 // United States
+// ★
 .flag-usa {
   @include ratio(2/3);
 };
@@ -1038,6 +1058,7 @@
   @include ratio(2/3);
 };
 // Viet Nam
+// ★
 .flag-vnm {
   @include ratio(2/3);
 };
