--- a/app/css/_helpers.scss
+++ b/app/css/_helpers.scss
@@ -39,6 +39,7 @@
   $w25:$width/25 !global;
   $w32:$width/32 !global;
   $w37:$width/37 !global;
+  $w50:$width/50 !global;
   $w52:$width/52 !global;
   $w110:$width/110 !global;
 }
