--- a/app/css/_fonts.scss
+++ b/app/css/_fonts.scss
@@ -4,7 +4,7 @@
     src: url('/fonts/Symbols.eot?#iefix') format('embedded-opentype'),
          url('/fonts/Symbols.woff') format('woff'),
          url('/fonts/Symbols.ttf') format('truetype'),
-         url('/fonts/Symbols.svg#amaranthregular') format('svg');
+         url('/fonts/Symbols.svg#symbols') format('svg');
     font-weight: normal;
     font-style: normal;
 }
