--- a/app/css/_variables.scss
+++ b/app/css/_variables.scss
@@ -4,6 +4,10 @@ $height:round($width * 2/3);
 @include set-syntactic-sugar($width, $height);
 
 
+// Special UTF-8
+$UTF8_MAPLE:"\e600";
+
+
 
 
 // /* VARIABLES */
