--- a/app/css/_variables.scss
+++ b/app/css/_variables.scss
@@ -6,7 +6,8 @@ $height:round($width * 2/3);
 
 // Special UTF-8
 $UTF8_MAPLE_LEAF:"\1F341";
-$UTF8_BLACK_STAR:"\2605"
+$UTF8_BLACK_STAR:"\2605";
+$UTF8_COUNTRY_ALB:"\e600";
 
 
 
