--- a/app/css/_flags.scss
+++ b/app/css/_flags.scss
@@ -42,8 +42,19 @@
   }
 };
 // American Samoa
+// http://en.wikipedia.org/wiki/Flag_of_American_Samoa
 .flag-asm {
-  @include ratio(2/3);
+  @include incomplete();
+  @include ratio(1/2);
+
+  $hypotenuse: sqrt(_($width) * _($width) + _($h2) * _($h2));
+  $alpha:round(90 - deg(asin(_($width) / $hypotenuse)));
+  $distance:$h2 * cos(rad($alpha));
+  background-color:white;
+  background-image:linear-gradient(#{180 - $alpha}deg, #000066 $distance, transparent $distance),
+                   linear-gradient(#{$alpha}deg, #000066 $distance, transparent $distance),
+                   linear-gradient(#{180 - $alpha}deg, #BD1021 $distance + $h20, transparent $distance + $h20),
+                   linear-gradient(#{$alpha}deg, #BD1021 $distance + $h20, transparent $distance + $h20);
 };
 // Andorra
 // http://en.wikipedia.org/wiki/Flag_of_Andorra
