--- a/app/css/_functions.scss
+++ b/app/css/_functions.scss
@@ -23,6 +23,9 @@
 }
 
 
+@function _($value) {
+    @return $value / ($value * 0 + 1);
+}
 
 
 
@@ -31,9 +34,6 @@
 //
 //
 //
-// @function strip-units($value) {
-//     @return $value / ($value * 0 + 1);
-// }
 // 
 // // Square root
 // @function sqrt($value, $test: $value/2, $error-range: .001) {
