--- a/app/css/_helpers.scss
+++ b/app/css/_helpers.scss
@@ -15,12 +15,14 @@
 
 // Expose global values as syntactic sugar
 @mixin set-syntactic-sugar($width, $height) {
+  $h2:$height/2 !global;
   $h3:$height/3 !global;
   $h7:$height/7 !global;
   $h10:$height/10 !global;
   $h11:$height/11 !global;
   $h16:$height/16 !global;
   $h18:$height/18 !global;
+  $h20:$height/20 !global;
   $h28:$height/28 !global;
   $h34:$height/34 !global;
 
