--- a/app/css/_variables.scss
+++ b/app/css/_variables.scss
@@ -8,6 +8,7 @@ $height:round($width * 2/3);
 $UTF8_MAPLE_LEAF:"\1F341";
 $UTF8_BLACK_STAR:"\2605";
 $UTF8_COUNTRY_ALB:"\e600";
+$UTF8_COUNTRY_AGO:"\e601";
 
 
 
