--- a/app/css/_flags.scss
+++ b/app/css/_flags.scss
@@ -423,7 +423,8 @@
 };
 // Germany
 .flag-deu {
-  @include ratio(2/3);
+  @include ratio(3/5);
+  @include three-lines(#000000, #FF0000, #FFCC00);
 };
 // Ghana
 // http://en.wikipedia.org/wiki/Flag_of_Ghana
